m/style.css
html,body,div,span,applet,object,iframe,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
	border:0;
	font-size:100%;
	font:inherit;
	vertical-align:baseline;
	margin:0;
	padding:0
}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
	display:block
}
body {
	line-height:1
}
ol,ul {
	list-style:none
}
blockquote,q {
	quotes:none
}
blockquote:before,blockquote:after,q:before,q:after {
	content:none
}
table {
	border-collapse:collapse;
	border-spacing:0
}
body {
	background:#3C3C3C;
	color:#999;
	font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
}
b {
	font-weight:600;
}
a img {
	border:none;
}
h2,#wrapper h3 {
	font-size:100%;
}
a .fb_share {
	margin-right:20px;
	margin-top:-5px;
}
.post li {
	list-style:square inside;
	margin-bottom:5px
}
.mini_user_avatar {
	-webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5);
	box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); 
	-moz-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); ;
	border-radius: 5px;
	float:left;
	height:20px;
	margin-right:5px;
	margin-top:-6px;
	width:20px;
}
.user_avatar {
	-webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5);
	box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); 
	-moz-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); ;
	border-radius: 5px;

	float:left;
	height:40px;
	margin-right:10px;
	margin-top:10px;
	width:40px;
}
.user_avatar_members {
	-webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5);
	box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); 
	-moz-box-shadow: 1px 2px 5px rgba(0, 0, 0, .5); ;
	border-radius: 5px;
	
	float:left;
	height:40px;
	margin-right:10px;
	width:40px
}
.heart_fav {
	background: url(http://teen-quotes.com/images/icones/sprite_hearts.png);
	height:14px;
	width:15px;
	display:inline-block;
	vertical-align: -4px;
}
.heart_fav.on {
	background-position: 0 0;
}
.heart_fav.off {
	background-position: -14px 0;
}
.icone,.mini_plus_icone {
	border:none;
	height:15px;
	margin-right:5px;
	vertical-align:middle;
	width:15px;
}
.mini_icone {
	border:none;
	height:12px;
	margin-right:10px;
	vertical-align:top;
	width:12px;
}
.mini_icone_middle {
	border:none;
	height:10px;
	margin-right:10px;
	vertical-align:middle;
	width:10px
}
.alerte {
	height:16px;
	margin-right:15px;
	vertical-align:middle;
	width:16px;
}
.icone_login {
	border:none;
	height:16px;
	margin-right:10px;
	vertical-align:top;
	width:16px;
}
.left {
	float:left
}
.right {
	float:right;
}
.colonne-gauche {
	float:left;
	text-align:right;
	vertical-align:middle;
	width:250px;
}
.colonne-milieu {
	float:left;
	padding-left:10px;
	text-align:left;
	vertical-align:middle;
	width:250px;
}
.colonne-droite {
	float:left;
	text-align:left;
	vertical-align:middle;
	width:250px;
}
.footer_quote {
	font-size: 80%;
	position: relative;
}
.grey_post .footer_quote {
	font-size: 60%;
}
.edit_comment img {
	margin-left: 10px;
}
#flags {
	margin-top: 8px;
	float: right;
}
.bleu {
	color:#374DA2;
}
#topbar {
	background:#262626;
	margin:0 auto;
	padding:8px 10px 5px 10px;
}
#topbar .title {
	margin-top:-10px;
}
#topbar .title a {
	color:#424545;
	text-decoration:none;
}
#topbar .title a:hover {
	color:#374DA2;
}
#topbar .title h3,#topbar .title h6 {
	color:#424545;
	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,Arial,sans-serif;
	margin:0;
}
#content {
	margin:0 auto;
}
.gap_page
{
	float: left;
	margin:0 2px 0 0;
	margin-top: -15px !important;
}
.page a,.page_bottom a,.page_bottom_number a,.page_bottom_number_active a {
	color:#666 !important
}
.page,.page_bottom {
	float:right;
	background:#F0F0F0;
	padding:4px 3px;
	-webkit-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.3);
	-moz-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.3);
	box-shadow:inset 0px 1px 3px hsla(0,0%,0%,0.3);
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	border-radius:4px;
	color:#999;
	float:right;
	font-size:70%;
	margin-left: 2px;
	line-height:10px
}
.page_bottom {
	margin-top:-10px
}
.page {
	margin-top:-5px;
	margin-bottom:5px;
}
.page_bottom_number,.page_bottom_number_active {
	float:left;
	line-height: 10px;
	margin-top:-10px;
	margin-right:2px;
	font-size:70%;
	background:#FFF;
	padding:4px 5px;
	-webkit-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.3);
	-moz-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.3);
	box-shadow:inset 0px 1px 3px hsla(0,0%,0%,0.3);
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	border-radius:4px;
}
.page_bottom_number_active {
	background:#DDD
}
.page_user_margin {
	margin-right:5px
}
#wrapper {
	margin-top:10px;
}
#wrapper h1,#wrapper h2 {
	border-bottom:1px solid #374DA2;
	color:#246;
	margin-left:5px;
	padding-bottom:3px;
	font-family:Helvetica;
	text-shadow:2px 2px 1px #ccc
}
#wrapper h3 {
	color:#246;
	margin-bottom:8px;
	margin-left:20px;
	font-family:Helvetica;
}
h1,h2,h3 {
	letter-spacing:-1px
}
.min_info {
	font-size:75%;
}
.post {
	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#fffafafa,EndColorStr=#ffdcdcdc);
	background-image: -moz-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -ms-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -o-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#FAFAFA),color-stop(100%,gainsboro));
	background-image: -webkit-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: linear-gradient(to bottom,#FAFAFA 0,gainsboro 100%);
	-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
	-moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
	box-shadow: 0px 1px 3px hsla(0,0%,0%,0.3);
	color:#666;
	font-size:12px;
	font-weight:300;
	line-height:20px;
	width:93%;
	margin:0 auto 15px;
	padding: 5px 10px;
}
#wrapper a,.post a {
	color:#374DA2;
	font-weight:300 !important;
	text-decoration:none;
}
.post a:hover,#footer a:hover {
	text-decoration:underline;
}
.post a.boutton {
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	background:#246;
	border-radius:10px;
	color:#fff;
	font-size:14px;
	font-weight:400;
	padding:5px 12px;
}
.post a.boutton:hover {
	-webkit-box-shadow:0 0 3px #374DA2,0 0 6px #374DA2;
	text-decoration:none;
}
.post .title {
	border-bottom:1px solid #374DA2;
	color:#424545;
	font-size:110%;
	font-weight:600;
	margin-bottom:15px;
}
.pub {
	margin-left:-8px;
	margin-bottom:-8px;
	width:100%;
	padding:0px
}
.pub_header {
	margin-left:-8px;
	margin-bottom:8px;
	width:100%;
	padding:0px
}
.pub_middle {
	margin-left:-8px;
	margin-bottom:18px;
	width:100%;
	padding:0px
}
.pub_footer {
	width:100%;
	padding:0px;
	margin: 6px 0 -12px 0;
}
.bandeau_erreur {
	margin:0 auto 5px;
	padding:5px;
	background:#fff9d7;
	border:1px solid #e2c822;
	color:#333;
	font-family:Helvetica;
	font-size:11px
}
.bandeau_infos {
	margin:10px auto 20px auto;
	padding:10px 20px;
	background:#D9EDF7;
	border:1px solid #BCE8F1;
	color:#3C53BD;
	font-family:Helvetica;
	font-size:11px;
}
.clear {
	clear:both;
}
.no_margin_left {
	margin-left:0 !important;
}
input,textarea {
	background:#FFF;
	border:1px solid #ccc;
	color:#246;
	font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
	outline:none;
	padding:2px;
}
input .edit_user,select .edit_user {
	width:180px;
}
input:hover,textarea:hover,input:focus,textarea:focus {
	border:1px solid #374DA2;
	outline: none;
}
input.submit {
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	background:#374DA2;
	border:none;
	border-radius:8px;
	color:#fff;
	font-size:11px;
	font-weight:400;
	padding:5px;
}
input.signup {
	width:230px;
}
#footer {
	background:#262626;
	font-size: 10px;
	margin:10px auto 0 auto;
	padding:12px 10px;
	color: #CCC;
	font-weight: 300 !important;
}
#footer a {
	color:#CCC !important;
	font-weight:300 !important;
	text-decoration:none;
}
.cadre_infos_profil {
	position:relative;
	margin-left:55px
}
.error {
	color:#246;
	display:block;
	font-weight:700;
	margin:10px auto 15px auto;
	vertical-align:middle
}
.erreur {
	background:transparent url('http://teen-quotes.com/images/icones/alert.png') no-repeat 2% 50%;
	color:#374DA2;
	font-weight:600;
	padding-left:30px;
}
.erreur_addquote {
	margin:5px 0 8px 0;
}
.download_app {
	margin:5px 0 8px 0;
	background:#fff9d7;
	border:1px solid #e2c822;
	padding:5px;
	color:#333;
	font-family:Helvetica;
	font-size:11px
}
.download_app {
	margin:0 0 12px 0;
}
.grey_post {
	background:#F5F5F5;
	border:1px solid #e5e5e5;
	padding:5px 10px;
	margin:0 auto 15px;
	color:#666;
	font-size:12px;
	font-weight:300;
}
.grey_line {
	border-bottom:2px solid #F0F0F0;
	margin:5px 10px
}
.favorite {
	opacity:0.5;
	position: absolute;
	left: 80px;
	top: -1px;
}
.favorite:hover {
	opacity:1
}
.link_grey {
	color:#666 !important;
}
#wrapper span.page_grey,#wrapper span.page_grey a {
	color:#666666
}
#menu_content {
	background: #C0C0C0;
}
ul.menu {
	text-align:center;
	font-size:11px;
	line-height:1.3em;
	margin-top:-10px;
	padding:2px 6px 0;
}
ul.menu li {
	float:left;
	list-style:none;
	margin:4px;
}
ul.menu li a {
	color:#555 !important;
	moz-box-shadow: inset 0 0 1px #fff;
	-ms-box-shadow: inset 0 0 1px #fff;
	-webkit-box-shadow: inset 0 0 1px white;
	box-shadow: inset 0 0 1px white;
	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#fffafafa,EndColorStr=#ffdcdcdc);
	background-image: -moz-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -ms-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -o-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#FAFAFA),color-stop(100%,gainsboro));
	background-image: -webkit-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
	background-image: linear-gradient(to bottom,#FAFAFA 0,gainsboro 100%);
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border:1px solid groove;
	font-weight:400 !important;
	padding: 2px 4px;
}
.box_nb_comments {
	background: #3C53BD;
	background: -moz-linear-gradient(top,#3C53BD 0%,#2A3A84 100%);
	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#3C53BD),color-stop(100%,#2A3A84));
	background: -webkit-linear-gradient(top,#3C53BD 0%,#2A3A84 100%);
	background: -o-linear-gradient(top,#3C53BD 0%,#2A3A84 100%);
	background: -ms-linear-gradient(top,#3C53BD 0%,#2A3A84 100%);
	background: linear-gradient(to bottom,#3C53BD 0%,#2A3A84 100%);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c53bd',endColorstr='#2a3a84',GradientType=0);
	width: 8px;
	height: 8px;
	padding: 3px;
	display: inline-block;
	text-align: center;
	position: absolute;
	left: 40px;
	top: 2px;
	color: #FFF;
	-webkit-border-radius: 13px;
	-moz-border-radius: 13px;
	border-radius: 13px;
	-moz-box-shadow: 0 1px 6px #888;
	-webkit-box-shadow: 0 1px 6px #888;
	box-shadow: 0 1px 6px #888;
	line-height: 9px;
	font-size: 9px;
}

